@@ -1,3 +1,7 @@
+2005-03-06	blytkerchan
+	* Makefile.in.in [install_kernel]: new target
+	[kernel.img]: ditto
+	
 2005-03-04	blytkerchan
 	* bootstrap.sh: add bochs module
 	* configure.ac.in: add support for --with-bochs option
